Enforced permanent scrollbar in the ontology manager to fix the content jumping horizontally that occurred with search when the vertical scrollbar disappeared and reappeared.
Issue: BMS-747
Reviewer: none

--- a/src/main/web/src/apps/ontology/app/ontology.scss
+++ b/src/main/web/src/apps/ontology/app/ontology.scss
@@ -36,14 +36,18 @@ ol {
 	padding-left: 0;
 }
 
+.om-ontology-manager {
+	overflow-y: scroll;
+}
+
+.om-content {
+	display: table;
+	box-sizing: border-box;
+}
+
 .om-title {
 	margin-top: 1.5rem;
 	margin-bottom: 2rem;
-}
-
-.om-ontology-manager {
-	display: table;
-	box-sizing: border-box;
 }
 
 .om-add-new-btn {
